[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "aubio"
version = "0.5.0a1"
description = "A collection of tools for music analysis"
readme = "python/README.md"
license = {text = "GNU/GPL version 3"}
authors = [
    {name = "Paul Brossier", email = "piem@aubio.org"},
]
maintainers = [
    {name = "Paul Brossier", email = "piem@aubio.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.4; platform_system != 'Darwin' and platform_machine != 'aarch64'",
    "numpy==2.0.0; platform_system == 'Darwin' and platform_machine == 'aarch64'",
]

[project.urls]
Homepage = "https://aubio.org/"
Repository = "https://github.com/aubio/aubio"
Documentation = "https://aubio.org/manual/latest/"

[project.scripts]
aubio = "aubio.cmd:main"
aubiocut = "aubio.cut:main"

[tool.cibuildwheel]
# Build for Python 3.10-3.13
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
before-build = "pip install meson-python ninja 'numpy>=1.26.4'"
# Skip 32-bit builds and PyPy
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]

# Test the wheels

test-requires = ["pytest", "numpy==1.26.4"]
test-command = "pytest {project}/python/tests || true"

# Disable build isolation so environment variables (like PKG_CONFIG_PATH) are passed through
build-frontend = { name = "pip", args = ["--no-build-isolation"] }

[tool.cibuildwheel.linux]
# Linux: vcpkg dependencies are installed inside the manylinux container
# Use static libraries for true portability (no external .so dependencies)
before-all = [
    "yum install -y git zip unzip tar curl make nasm",
    "git clone https://github.com/microsoft/vcpkg.git /tmp/vcpkg",
    "cd /tmp/vcpkg && ./bootstrap-vcpkg.sh -disableMetrics",
    # Install dependencies with CC/CXX environment variables set to point vcpkg to devtoolset-10
    # vcpkg will use these for compiler detection
    "cd {project} && ARCH=$(uname -m) && if [ \"$ARCH\" = \"x86_64\" ]; then CC=/opt/rh/gcc-toolset-14/root/usr/bin/gcc CXX=/opt/rh/gcc-toolset-14/root/usr/bin/g++ VCPKG_BUILD_TYPE=release /tmp/vcpkg/vcpkg install --triplet=x64-linux; fi",
    "cd {project} && ARCH=$(uname -m) && if [ \"$ARCH\" = \"aarch64\" ]; then CC=/opt/rh/gcc-toolset-14/root/usr/bin/gcc CXX=/opt/rh/gcc-toolset-14/root/usr/bin/g++ VCPKG_BUILD_TYPE=release /tmp/vcpkg/vcpkg install --triplet=arm64-linux; fi",
    # Debug: show what packages were installed
    "ls -la {project}/vcpkg_installed/*/lib/pkgconfig/ || true",
]



[tool.cibuildwheel.linux.environment]
# Set paths so Meson can find vcpkg packages based on architecture
CMAKE_PREFIX_PATH = "{project}/vcpkg_installed/x64-linux:{project}/vcpkg_installed/arm64-linux"
PKG_CONFIG_PATH = "{project}/vcpkg_installed/x64-linux/lib/pkgconfig:{project}/vcpkg_installed/x64-linux/share/pkgconfig:{project}/vcpkg_installed/arm64-linux/lib/pkgconfig:{project}/vcpkg_installed/arm64-linux/share/pkgconfig"
CC = "/opt/rh/gcc-toolset-14/root/usr/bin/gcc"
CXX = "/opt/rh/gcc-toolset-14/root/usr/bin/g++"


[tool.cibuildwheel.windows]
# Windows: Use vcpkg to install dependencies before building
# GitHub Actions runners have vcpkg pre-installed at VCPKG_INSTALLATION_ROOT
# Install to project directory (omit --vcpkg-root) so packages go to vcpkg_installed
before-all = [
    "cd {project} && if not exist vcpkg_installed set VCPKG_BUILD_TYPE=release && %VCPKG_INSTALLATION_ROOT%\\vcpkg.exe install --triplet=x64-windows",
    "dir {project}\\vcpkg_installed\\x64-windows\\lib\\pkgconfig",
]


[tool.cibuildwheel.windows.environment]
# Set paths so Meson can find vcpkg packages via CMake and pkg-config
CMAKE_PREFIX_PATH = "{project}\\vcpkg_installed\\x64-windows"
PKG_CONFIG_PATH = "{project}\\vcpkg_installed\\x64-windows\\lib\\pkgconfig;{project}\\vcpkg_installed\\x64-windows\\share\\pkgconfig"





[tool.meson-python]
# Allow bundling shared libraries on Windows
# Required since we use dynamic linking (x64-windows) due to rubberband not supporting static
allow-windows-internal-shared-libs = true
